--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
        <div class="row">
             <div class="item">
-
+                <img alt="" scr="img\2.jpg">
             </div>   
             <div class="item">
 
