--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="main">
        <div class="row">
             <div class="item">
-                <img alt="" scr="img\2.jpg">
+                <img alt="" src="img\wideshotwater.jpeg">
             </div>   
             <div class="item">
+                <img alt="" src="img\8.jpg">
 
             </div>   
             <div class="item">
