--- a/index.html
+++ b/index.html
@@ -19,28 +19,35 @@
 
             </div>   
             <div class="item">
+                <img alt="" src="img\4.jpg">
 
             </div>   
        </div> 
        <div class="row">
             <div class="item">
+                <img alt="" src="img\6.jpg">
 
             </div>   
             <div class="item">
+                <img alt="" src="img\9.jpeg">
 
             </div>   
             <div class="item">
+                <img alt="" src="img\7.jpg">
 
             </div>   
        </div> 
        <div class="row">
             <div class="item">
+                <img alt="" src="img\1.jpg">
 
             </div>   
             <div class="item">
+                <img alt="" scr="img\3.jpg">
 
             </div>   
             <div class="item">
+                <img alt="" src="img\5.jpg">
 
             </div>   
         
