--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             </div>   
             <div class="item">
-                <img alt="" scr="img\3.jpg">
+                <img alt="" src="img\3.jpg">
 
             </div>   
             <div class="item">
