image file changes

--- a/image.html
+++ b/image.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="detail-image"></div>
-        <img alt="" src="img\4.jpg">
+    <div class="detail-image">
+         <img class="one-image" alt="" src="img\4.jpg">
+    </div>
+       
 </body>
 </html>
