--- a/image.html
+++ b/image.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="detail-image">
-         <img class="one-image" alt="" src="img\4.jpg">
+        <a href="index.html">Back</a>
+         <img class="one-image" alt="" src="img/4.jpg">
+         <h2 class="name">MSU Wharton Center</h2>
+         <p class="description">MSU Wharton Center for Performing Arts, which was built in 1982, is one of the most attractive buildings in the area. It is also considered as an architectural heritage of MSU. According to the its official site it has been built in 20 years.   </p>
     </div>
        
 </body>
