--- a/index.html
+++ b/index.html
@@ -5,49 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Images</title>
+    <title>Images grid</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <div class="main">
        <div class="row">
             <div class="item">
-                <img alt="" src="img\wideshotwater.jpeg">
+                <img alt="" src="img/wideshotwater.jpeg">
             </div>   
             <div class="item">
-                <img alt="" src="img\8.jpg">
+                <img alt="" src="img/8.jpg">
 
             </div>   
             <div class="item">
-                <img alt="" src="img\4.jpg">
+                <a href="image.html">
+                    <img alt="" src="img/4.jpg">
+                </a>
+            
+            </div>   
+       </div> 
+       <div class="row">
+            <div class="item">
+                <img alt="" src="img/6.jpg">
+
+            </div>   
+            <div class="item">
+                <img alt="" src="img/9.jpeg">
+
+            </div>   
+            <div class="item">
+                <img alt="" src="img/7.jpg">
 
             </div>   
        </div> 
        <div class="row">
             <div class="item">
-                <img alt="" src="img\6.jpg">
+                <img alt="" src="img/1.jpg">
 
             </div>   
             <div class="item">
-                <img alt="" src="img\9.jpeg">
+                <img alt="" src="img/3.jpg">
 
             </div>   
             <div class="item">
-                <img alt="" src="img\7.jpg">
-
-            </div>   
-       </div> 
-       <div class="row">
-            <div class="item">
-                <img alt="" src="img\1.jpg">
-
-            </div>   
-            <div class="item">
-                <img alt="" src="img\3.jpg">
-
-            </div>   
-            <div class="item">
-                <img alt="" src="img\5.jpg">
+                <img alt="" src="img/5.jpg">
 
             </div>   
         
